@@ -9,11 +9,22 @@ import io.github.habatoo.repositories.CartItemRepository;
 import io.github.habatoo.repositories.ItemRepository;
 import io.github.habatoo.servicies.CartService;
 import io.github.habatoo.servicies.ItemService;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+import reactor.util.function.Tuple2;
+import reactor.util.function.Tuples;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.math.BigDecimal;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.IntStream;
 
 /**
@@ -22,6 +33,7 @@ import java.util.stream.IntStream;
  */
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
 
     private final ItemRepository repository;
@@ -29,204 +41,185 @@ public class ItemServiceImpl implements ItemService {
     private final CartService cartService;
     private final ItemMapper mapper;
 
-    public ItemServiceImpl(
-            ItemRepository repository,
-            CartItemRepository cartItemRepository,
-            CartService cartService,
-            ItemMapper mapper) {
-        this.repository = repository;
-        this.cartItemRepository = cartItemRepository;
-        this.cartService = cartService;
-        this.mapper = mapper;
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Mono<ItemsDtoResponse> getItems(GetItemsRequestDto request) {
+        Mono<CartDto> cartMono = cartService.getItemsInTheCart();
+
+        int pageSize = request.getPageSize() != null ? request.getPageSize() : 5;
+        int pageNumber = request.getPageNumber() != null ? request.getPageNumber() : 1;
+
+        Sort sort = getSort(request);
+        Pageable pageable = PageRequest.of(pageNumber - 1, pageSize, sort);
+
+        String rawSearch = request.getSearch();
+        boolean noSearch = rawSearch == null || rawSearch.trim().isEmpty();
+
+        Flux<Item> itemsFlux;
+        Mono<Long> totalMono;
+
+        if (noSearch) {
+            itemsFlux = repository.findAllBy(pageable);
+            totalMono = repository.count();
+        } else {
+            String search = rawSearch.trim();
+
+            itemsFlux = repository.findByTitleContainingOrDescriptionContaining(search, search, pageable);
+            totalMono = repository.countByTitleContainingOrDescriptionContaining(search, search);
+        }
+
+        return itemsFlux
+                .collectList()
+                .map(mapper::toDto)
+                .zipWith(cartMono)
+                .flatMap(tuple -> {
+                    List<ItemDto> itemDtos = tuple.getT1();
+                    CartDto cart = tuple.getT2();
+
+                    return loadCountsForItems(itemDtos, cart.id())
+                            .map(countMap -> Tuples.of(itemDtos, cart, countMap));
+                })
+                .zipWith(totalMono)
+                .map(tuple -> {
+                    List<ItemDto> items = tuple.getT1().getT1();
+                    CartDto cart = tuple.getT1().getT2();
+                    Map<Long, Integer> countMap = tuple.getT1().getT3();
+                    Long total = tuple.getT2();
+
+                    return getItemsDtoResponseFunction(pageSize, pageNumber, countMap)
+                            .apply(Tuples.of(Tuples.of(items, cart), total));
+                });
     }
 
     /**
      * {@inheritDoc}
      */
     @Override
-    public ItemsDtoResponse getItems(GetItemsRequestDto request) {
-        log.debug("Запрошено получение товаров: request={}", request);
+    public Mono<ItemDtoResponse> getItem(Long id) {
+        Mono<ItemDto> itemMono = loadItemDto(id)
+                .defaultIfEmpty(obtainEmptyItemDto());
 
-        List<Item> all = repository.findAll();
-        log.info("Всего товаров в репозитории: {}", all.size());
+        Mono<CartDto> cartMono = cartService.getItemsInTheCart()
+                .defaultIfEmpty(obtainCartDto());
 
-        List<Item> filtered = all;
-        if (request.getSearch() != null && !request.getSearch().isBlank()) {
-            String lower = request.getSearch().trim().toLowerCase();
-            log.debug("Поиск по строке: '{}'", lower);
-            filtered = filtered.stream()
-                    .filter(i -> i.getTitle().toLowerCase().contains(lower)
-                            || (i.getDescription() != null && i.getDescription().toLowerCase().contains(lower)))
-                    .toList();
-            log.info("Найдено товаров после фильтрации: {}", filtered.size());
-        }
+        return itemMono.zipWith(cartMono)
+                .flatMap(tuple -> buildItemResponse(
+                        tuple.getT1(),
+                        tuple.getT2(),
+                        id
+                ));
+    }
 
-        if (request.getSort() != null) {
-            log.debug("Сортировка: {}", request.getSort());
-            switch (request.getSort()) {
-                case ALPHA -> {
-                    filtered = filtered.stream()
-                            .sorted(Comparator.comparing(Item::getTitle)).toList();
-                    log.debug("Сортировка ALPHA выполнена");
-                }
-                case PRICE -> {
-                    filtered = filtered.stream()
-                            .sorted(Comparator.comparing(Item::getPrice)).toList();
-                    log.debug("Сортировка PRICE выполнена");
-                }
-                default -> log.debug("Неизвестный тип сортировки: {}", request.getSort());
-            }
-        }
+    /**
+     * {@inheritDoc}
+     */
+    @Override
+    public Mono<ItemDtoResponse> changeNumberOfItemsFromPage(ChangeNumberOfItemsRequestDto request) {
+        return cartService.changeNumberOfItems(request)
+                .switchIfEmpty(Mono.defer(() -> repository.findById(request.getId()).map(mapper::toDto)))
+                .zipWith(cartService.getItemsInTheCart())
+                .flatMap(tuple -> buildItemResponse(
+                        tuple.getT1(),
+                        tuple.getT2(),
+                        tuple.getT1().id()));
+    }
 
-        int pageSize = request.getPageSize() != null ? request.getPageSize() : 5;
-        int pageNumber = request.getPageNumber() != null ? request.getPageNumber() : 1;
-        int from = (pageNumber - 1) * pageSize;
-        int to = Math.min(from + pageSize, filtered.size());
+    private Mono<Map<Long, Integer>> loadCountsForItems(List<ItemDto> itemDtos, Long cartId) {
+        return Flux.fromIterable(itemDtos)
+                .flatMap(itemDto ->
+                        cartItemRepository.findCountByCartIdAndItemId(cartId, itemDto.id())
+                                .defaultIfEmpty(0)
+                                .map(cnt -> Map.entry(itemDto.id(), cnt))
+                )
+                .collectMap(Map.Entry::getKey, Map.Entry::getValue);
+    }
 
-        log.debug(
-                "Пагинация: pageNumber={}, pageSize={}, from={}, to={}",
-                pageNumber, pageSize, from, to);
+    private Function<Tuple2<Tuple2<List<ItemDto>, CartDto>, Long>, ItemsDtoResponse> getItemsDtoResponseFunction(
+            int pageSize, int pageNumber, Map<Long, Integer> map) {
+        return tuple -> {
+            CartDto cart = tuple.getT1().getT2();
+            long total = tuple.getT2();
+            List<ItemDto> itemDtos = tuple.getT1().getT1();
+            List<List<ItemDto>> rows = splitByRows(itemDtos, 3);
+            Paging paging = getPaging(pageSize, pageNumber, total);
 
-        List<Item> page = from < filtered.size() ? filtered.subList(from, to) : Collections.emptyList();
-        log.info("Товаров на странице: {}", page.size());
+            return buildItemsResponse(rows, cart, paging, map);
+        };
+    }
 
-        List<ItemDto> items = mapper.toDto(page);
-        log.debug("Преобразование товаров в DTO выполнено");
-
-        List<List<ItemDto>> itemsRows = splitByRows(items, 3);
-        log.trace(
-                "Формирование строк товаров для фронта завершено, строк: {}",
-                itemsRows.size());
-
-        CartDto cart = obtainCart();
-        log.debug(
-                "Корзина получена: cartId={}, товаров в корзине={}",
-                cart.id(), cart.items().size());
-
-        Map<Long, Integer> itemCounts = obtainItemCounts(items, cart.id());
-
-        Paging paging = Paging.builder()
-                .total(filtered.size())
+    private Paging getPaging(int pageSize, int pageNumber, long total) {
+        return Paging.builder()
+                .total((int) total)
                 .pageSize(pageSize)
                 .pageNumber(pageNumber)
                 .hasPrevious(pageNumber > 1)
-                .hasNext(pageNumber * pageSize < filtered.size())
+                .hasNext((long) pageNumber * pageSize < total)
                 .build();
+    }
 
-        log.debug("Paging info: {}", paging);
+    private Sort getSort(GetItemsRequestDto request) {
+        if (request.getSort() == null) return Sort.unsorted();
 
-        ItemsDtoResponse response = ItemsDtoResponse.builder()
-                .itemsRows(itemsRows)
+        return switch (request.getSort()) {
+            case ALPHA -> Sort.by("title").ascending();
+            case PRICE -> Sort.by("price").ascending();
+            default -> Sort.unsorted();
+        };
+    }
+
+    private Mono<ItemDtoResponse> buildItemResponse(ItemDto item, CartDto cart, Long itemId) {
+        return cartItemRepository.findCountByCartIdAndItemId(cart.id(), itemId)
+                .defaultIfEmpty(0)
+                .map(cnt -> ItemDtoResponse.builder()
+                        .item(item)
+                        .cartCount(cnt)
+                        .build());
+    }
+
+    private Mono<ItemDto> loadItemDto(Long id) {
+        return repository.findById(id)
+                .switchIfEmpty(Mono.error(new IllegalStateException("Товар с id=" + id + " не найден")))
+                .map(mapper::toDto);
+    }
+
+    private ItemsDtoResponse buildItemsResponse(
+            List<List<ItemDto>> rows,
+            CartDto cart,
+            Paging paging,
+            Map<Long, Integer> itemCounts
+    ) {
+        return ItemsDtoResponse.builder()
+                .itemsRows(rows)
                 .cart(cart)
                 .paging(paging)
                 .itemCounts(itemCounts)
                 .build();
-
-        log.info(
-                "Подготовлен ответ на запрос товаров: itemsRows={}, totalFiltered={}",
-                itemsRows.size(), filtered.size());
-        return response;
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public ItemDtoResponse getItem(Long id) {
-        log.debug("Запрошено получение товара по id={}", id);
-        ItemDto item = repository.findById(id)
-                .map(mapper::toDto)
-                .orElseThrow(() -> {
-                    log.error("Товар с id={} не найден", id);
-                    return new IllegalStateException("Товар с id=%d не найден".formatted(id));
-                });
-        CartDto cart = obtainCart();
-        Long cartId = cart.id();
-        Integer cartCount = cartItemRepository.findCountByCartIdAndItemId(cartId, id);
-        if (cartCount == null) {
-            cartCount = 0;
-        }
-
-        log.info("Товар получен: id={}, в корзине={}", id, cartCount);
-
-        return ItemDtoResponse.builder()
-                .item(item)
-                .cartCount(cartCount)
-                .build();
-    }
-
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    public ItemDtoResponse changeNumberOfItemsFromPage(ChangeNumberOfItemsRequestDto request) {
-        log.debug("Запрошено изменение товаров из страницы: request={}", request);
-
-        ItemDto item = cartService.changeNumberOfItems(request);
-        CartDto cart = obtainCart();
-        Long cartId = cart.id();
-        Integer cartCount = getCartCount(cartId, request.getId());
-
-        log.info(
-                "Изменение количества товара в корзине: itemId={}, newCount={}",
-                request.getId(), cartCount);
-
-        return ItemDtoResponse.builder()
-                .item(item)
-                .cartCount(cartCount)
-                .build();
-    }
-
-    private Integer getCartCount(Long cartId, Long id) {
-        Integer cartCount = cartItemRepository.findCountByCartIdAndItemId(cartId, id);
-        if (cartCount == null) {
-            cartCount = 0;
-        }
-        return cartCount;
-    }
-
-    private Map<Long, Integer> obtainItemCounts(List<ItemDto> items, Long cartId) {
-        Map<Long, Integer> itemCounts = new HashMap<>();
-        for (ItemDto item : items) {
-            Integer count = cartItemRepository.findCountByCartIdAndItemId(cartId, item.id());
-            itemCounts.put(item.id(), count == null ? 0 : count);
-        }
-
-        return itemCounts;
     }
 
     private List<List<ItemDto>> splitByRows(List<ItemDto> items, int rowSize) {
         int totalRows = (int) Math.ceil((double) items.size() / rowSize);
-        log.debug(
-                "splitByRows: itemsTotal={}, rowSize={}, totalRows={}",
-                items.size(), rowSize, totalRows);
 
         return IntStream.range(0, totalRows)
-                .mapToObj(i -> getSubList(items, rowSize, i))
-                .map(subList -> getDtoList(rowSize, subList))
-                .collect(Collectors.toList());
+                .mapToObj(i -> {
+                    int from = i * rowSize;
+                    int to = Math.min(items.size(), (i + 1) * rowSize);
+                    List<ItemDto> sub = new ArrayList<>(items.subList(from, to));
+
+                    while (sub.size() < rowSize) {
+                        sub.add(obtainEmptyItemDto());
+                    }
+                    return sub;
+                })
+                .toList();
     }
 
-    private List<ItemDto> getSubList(List<ItemDto> items, int rowSize, int i) {
-        List<ItemDto> result = items.subList(i * rowSize, Math.min(items.size(), (i + 1) * rowSize));
-        log.trace(
-                "getSubList: from={}, to={}, size={}",
-                i * rowSize, Math.min(items.size(), (i + 1) * rowSize), result.size());
-        return result;
+    private ItemDto obtainEmptyItemDto() {
+        return new ItemDto(-1L, "", "", "", null, 0);
     }
 
-    private List<ItemDto> getDtoList(int rowSize, List<ItemDto> subList) {
-        List<ItemDto> list = new ArrayList<>(subList);
-        while (list.size() < rowSize) {
-            list.add(new ItemDto(-1L, "", "", "", null, 0));
-        }
-        log.trace("getDtoList: rowSize={}, filledSize={}", rowSize, list.size());
-        return list;
-    }
-
-    private CartDto obtainCart() {
-        CartDto cart = cartService.getItemsInTheCart();
-        log.debug("obtainCart: cartId={}, itemsCount={}", cart.id(), cart.items().size());
-        return cart;
+    private CartDto obtainCartDto() {
+        return new CartDto(-1L, List.of(), BigDecimal.ZERO);
     }
 }
